force-app/main/default/objects/Order/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>Quote.Discount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>