force-app/main/default/objects/Order/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>