force-app/main/default/objects/Order/fields/Net_Discount__c.field-meta.xml
<CustomField>
    <fullName>Net_Discount__c</fullName>
    <formula>Vendor_Commission__c  + Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>