force-app/main/default/objects/Order/fields/Netsuite_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Netsuite External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>