force-app/main/default/objects/Order/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <formula>HYPERLINK(
    &quot;/&quot; &amp; Id,
    IF(
        TEXT(Order_Type__c) = &quot;Sample Order&quot;,
        &quot;SMPL-&quot; &amp; OrderNumber,
        &quot;SO-&quot; &amp; OrderNumber
    ),
    &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>