force-app/main/default/objects/Order/fields/Preferred_Team__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Team__c</fullName>
    <label>Preferred Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : OM - Team 01</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 001</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 002</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 003</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 004</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 005</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 006</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 007</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 008</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 009</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 010</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 011</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 012</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 013</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 014</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 015</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 016</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 017</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 018</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 019</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 020</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 021</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 022</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 023</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 024</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 025</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 026</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 027</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 028</fullName>
            </value>
            <value>
                <fullName>CEO : MGMT : OPS : Inst. : Inst. Team : Team 029</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>