force-app/main/default/objects/Order/fields/Price_Level__c.field-meta.xml
<CustomField>
    <fullName>Price_Level__c</fullName>
    <label>Price Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base Price</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>