force-app/main/default/objects/Order/fields/Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Reason_Type__c</fullName>
    <label>Reason/Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Stock Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>