force-app/main/default/objects/Order/fields/Sales_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Process_Status__c</fullName>
    <label>Sales Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Stock Is Not Available</fullName>
            </value>
            <value>
                <fullName>Stock Is Available</fullName>
            </value>
            <value>
                <fullName>Pending Site Inspection</fullName>
            </value>
            <value>
                <fullName>Site Is Ready</fullName>
            </value>
            <value>
                <fullName>Pending Payment</fullName>
            </value>
            <value>
                <fullName>Pending Pass &amp; Permit</fullName>
            </value>
            <value>
                <fullName>Pending Installation</fullName>
            </value>
            <value>
                <fullName>Installation In Progress</fullName>
            </value>
            <value>
                <fullName>Installation Completed</fullName>
            </value>
            <value>
                <fullName>Pending After Sales</fullName>
            </value>
            <value>
                <fullName>After Sales Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>