force-app/main/default/objects/Order/fields/Sample_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Order_Type__c</fullName>
    <label>Sample Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web Sample Order</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>