force-app/main/default/objects/Order/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EX Works</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
            <value>
                <fullName>Air Freight</fullName>
            </value>
            <value>
                <fullName>Sea Freight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>