force-app/main/default/objects/Order/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary</label>
    <referenceTo>Subsidiary__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>