force-app/main/default/objects/Order/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <label>Total Amount Paid</label>
    <summarizedField>Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payment__c.Status__c</field>
        <operation>equals</operation>
        <value>Paid</value>
    </summaryFilterItems>
    <summaryForeignKey>Payment__c.Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>