force-app/main/default/objects/Order/fields/Vendor_Commission__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Commission__c</fullName>
    <formula>Quote.Vendor_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>